fixed about page and it is aligned again, though not responsive enough

--- a/src/_about-container.scss
+++ b/src/_about-container.scss
@@ -1,3 +1,4 @@
+
 .about-box {
   background-color: rgb(240, 219, 223);
 }
@@ -6,22 +7,22 @@
   display: flex;
   align-content: flex-start;
   padding: 100px;
-  
 }
 
 .intro-heading {
   display: inline-table;
   align-items: center;
+  text-align: center;
   font-family: 'Lato', sans-serif;
   font-family: 'Ubuntu Mono', monospace;
   line-height: 32px;
   font-weight: 100;
   margin-left: 100px;
   margin-right: 50px;
-}
 
- .panda {
-    margin: 60px;
+  .panda{
+    margin-left: 160px;
+    margin-top: 50px;
     top:40%;
     left:43%;
     height: 120px;
@@ -123,7 +124,6 @@
       transform:rotate(120deg);
     }
   }
-
   .hand-r{
     transform: rotate(-90deg);
     bottom: 92px;
@@ -156,36 +156,34 @@
     border-radius: 50%;
     bottom: 105px;
     left:5px;
+    }
   }
 
-  .about-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 100px;
-    margin-right: 200px;
-    text-align: center;
-    justify-content: flex-end;
-    align-items: flex-start;
-  
-    
-    p {
-      line-height: 32px;   
-      font-weight: lighter;  
-      color: #fff;
-      background-color: rgb(206, 202, 202);
-      border-radius: 10%;
-      font-family: 'Lato', sans-serif;
-      font-family: 'Ubuntu Mono', monospace;
-     
-    }
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+  display: inline-flex;
+  align-self: flex-end;
+  margin-left: 100px;
+  text-align: center;
 
-   .answer {
+  
+  p {
+    line-height: 32px;   
+    font-weight: lighter;  
+    color: #fff;
+    background-color: rgb(206, 202, 202);
+    border-radius: 10%;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Ubuntu Mono', monospace;
+   
+
+ .answer {
     text-indent: 100px;
     color: black;
-     
-   }
+    }
   }
-
+}
 
 
 
