--- a/src/main.css
+++ b/src/main.css
@@ -64,6 +64,7 @@
 .intro-heading {
   display: inline-table;
   align-items: center;
+  text-align: center;
   font-family: "Lato", sans-serif;
   font-family: "Ubuntu Mono", monospace;
   line-height: 32px;
@@ -71,9 +72,9 @@
   margin-left: 100px;
   margin-right: 50px;
 }
-
-.animation .panda {
-  margin: 60px;
+.intro-heading .panda {
+  margin-left: 160px;
+  margin-top: 50px;
   top: 40%;
   left: 43%;
   height: 120px;
@@ -82,8 +83,7 @@
   border: 5px solid black;
   border-radius: 30%;
 }
-
-.face {
+.intro-heading .face {
   position: relative;
   background-color: white;
   border: 5px solid black;
@@ -93,48 +93,41 @@
   bottom: 30px;
   right: 20px;
 }
-
-.ear-l, .ear-r {
+.intro-heading .ear-l, .intro-heading .ear-r {
   position: relative;
   background-color: black;
   height: 25px;
   width: 40px;
   border-radius: 0px 0px 40px 40px;
 }
-
-.ear-l {
+.intro-heading .ear-l {
   transform: rotate(145deg);
   bottom: 13px;
   right: 8px;
 }
-
-.ear-r {
+.intro-heading .ear-r {
   transform: rotate(-145deg);
   left: 78px;
   bottom: 38px;
 }
-
-.eye-l, .eye-r {
+.intro-heading .eye-l, .intro-heading .eye-r {
   position: relative;
   background-color: black;
   width: 28px;
   height: 33px;
   border-radius: 50%;
 }
-
-.eye-l {
+.intro-heading .eye-l {
   bottom: 30px;
   left: 10px;
   transform: rotate(25deg);
 }
-
-.eye-r {
+.intro-heading .eye-r {
   bottom: 63px;
   left: 72px;
   transform: rotate(-25deg);
 }
-
-.eyeball {
+.intro-heading .eyeball {
   position: relative;
   top: 8px;
   left: 7px;
@@ -143,8 +136,7 @@
   border-radius: 50%;
   background-color: white;
 }
-
-.nose {
+.intro-heading .nose {
   position: relative;
   height: 8px;
   width: 15px;
@@ -153,53 +145,46 @@
   bottom: 65px;
   left: 48px;
 }
-
-.hand-l, .hand-r {
+.intro-heading .hand-l, .intro-heading .hand-r {
   position: relative;
   width: 25px;
   height: 43px;
   background-color: black;
   border-radius: 30px;
 }
-
-.hand-l {
+.intro-heading .hand-l {
   transform: rotate(90deg);
   bottom: 28px;
   left: 1px;
   animation: wave 1.5s infinite;
   transform-origin: top;
 }
-
 @keyframes wave {
   50% {
     transform: rotate(120deg);
   }
 }
-.hand-r {
+.intro-heading .hand-r {
   transform: rotate(-90deg);
   bottom: 92px;
   left: 108px;
 }
-
-.leg-l, .leg-r {
+.intro-heading .leg-l, .intro-heading .leg-r {
   position: relative;
   background-color: black;
   width: 17px;
   height: 25px;
   border-radius: 0px 0px 30px 30px;
 }
-
-.leg-l {
+.intro-heading .leg-l {
   bottom: 65px;
   left: 30px;
 }
-
-.leg-r {
+.intro-heading .leg-r {
   bottom: 90px;
   left: 65px;
 }
-
-.shadow {
+.intro-heading .shadow {
   position: relative;
   background-color: rgba(0, 0, 0, 0.2);
   height: 30px;
@@ -212,10 +197,10 @@
 .about-container {
   display: flex;
   flex-wrap: wrap;
+  display: inline-flex;
+  align-self: flex-end;
   margin-left: 100px;
   text-align: center;
-  justify-content: flex-end;
-  align-content: flex-start;
 }
 .about-container p {
   line-height: 32px;
